Fixed button overflow

--- a/src/app/page/page.component.css
+++ b/src/app/page/page.component.css
@@ -206,12 +206,14 @@ p.firstContent {
     border-radius: 50px;
     padding: 11px 25px; 
     min-width: 200px;
-    max-width: 568px;
+    max-width: 100%;
     color:white;
     text-decoration: none;
     display: inline-block;
     font-size: 20px;
     line-height: 1.4;
+    overflow-x: hidden;
+    vertical-align: top;
 }
 
 .linkContent { 
